--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
       <div class="container-fluid">
-          <div class="">
+          <div class="page-header">
             <a href="#"><h1> <center>Nepal Japan Children Library</center></h1> </a>
           </div>
           <nav class="navbar navbar-expand-md navbar-dark fixed bg-dark">
