--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">NJCL</a>
+      <a class="navbar-brand" href="#" >NJCL</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -49,8 +49,8 @@
   
     <div class="row justify-content-center">
         <div class="col-12 col-md-10 col-lg-8">
-            <form class="card card-sm">
-                <div class="card-body row no-gutters align-items-center">
+            <form>
+                <div class=" row no-gutters align-items-center">
                     <div class="col-auto">
                         <i class="fas fa-search h4 text-body"></i>
                     </div>
@@ -59,13 +59,13 @@
                         <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Search Book Title/Author">
                     </div>
                     <!--end of col-->
-                    <div class="col-auto">
+                    <div class="col-auto p-4 ml-3">
                         <button class="btn btn-lg btn-success" type="submit">Search</button>
                     </div>
                     <!--end of col-->
                 </div>
             </form>
-            <a class="btn btn-primary" href="#" role="button">Advanced Search</a>
+            <a class="btn btn-primary btn-sm" href="#" role="button">Advanced Search</a>
         </div>
         <!--end of col-->
     </div>
