--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/cutomstyle.css">
 
     <title>NJCL</title>
+    <link rel="icon" type="image/png" href="assets/booklogo.jpg" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
