--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
     <section id="home-page">
     
-      <div id="home-cover" class="parallax-window" data-parallax="scroll"  data-image-src="assets/home.jpeg" >
+      <div id="home-cover" class="parallax-window" data-parallax="scroll" aste data-image-src="assets/home.jpeg" >
         <div id="home-page-desc">
         <h1>Nepal Japan Children Library</h1>
           <p> Library for the children.</p>
